Bug 535295 - [OOPP] Tearing/Repainting issues with flash videos, their controls and other page content during/after scrolling. r=roc.